--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,104 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    android:hardwareAccelerated="true"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <!-- Toolbar Container -->
     <LinearLayout
+        android:id="@+id/toolbarContainer"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/top_bar_height"
-        android:background="@drawable/top_bar_bg"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="#FFFFFF"
+        android:elevation="4dp"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
+        <!-- Back Button -->
         <ImageView
-            android:id="@+id/webIcon"
-            android:layout_width="@dimen/top_bar_height"
-            android:layout_height="@dimen/top_bar_height"
-            android:background="#01000000"
-            android:contentDescription="favicon"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:padding="11dp"
+            android:id="@+id/goBack"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Back"
+            android:padding="8dp"
             android:src="@drawable/tool" />
 
-        <EditText
-            android:id="@+id/textUrl"
-            android:layout_width="0dp"
-            android:layout_height="34dp"
-            android:layout_marginTop="3dp"
-            android:layout_weight="1"
-            android:background="#01000000"
-            android:hint="@string/input_url"
-            android:imeOptions="actionGo"
-            android:inputType="textUri"
-            android:maxLines="1"
-            android:textColor="@color/input_color"
-            android:textColorHint="#9f9f9f"
-            android:textSize="15sp" />
+        <!-- Forward Button -->
+        <ImageView
+            android:id="@+id/goForward"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Forward"
+            android:padding="8dp"
+            android:src="@drawable/tool" />
 
+        <!-- URL Bar Container -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            app:cardBackgroundColor="#F5F5F5"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingStart="12dp"
+                android:paddingEnd="8dp">
+
+                <!-- Favicon -->
+                <ImageView
+                    android:id="@+id/webIcon"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:contentDescription="Icon"
+                    android:src="@drawable/tool" />
+
+                <!-- URL EditText -->
+                <EditText
+                    android:id="@+id/textUrl"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="8dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:hint="Search or type URL"
+                    android:imeOptions="actionGo"
+                    android:importantForAutofill="no"
+                    android:inputType="textUri"
+                    android:maxLines="1"
+                    android:textColor="#000000"
+                    android:textColorHint="#999999"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Refresh/Go Button -->
         <ImageView
             android:id="@+id/btnStart"
-            android:layout_width="@dimen/top_bar_height"
-            android:layout_height="@dimen/top_bar_height"
-            android:layout_marginEnd="2dp"
-            android:background="#01000000"
-            android:contentDescription="refresh"
-            android:padding="11dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Refresh"
+            android:padding="8dp"
             android:src="@drawable/refresh" />
 
     </LinearLayout>
 
-    <FrameLayout
+    <!-- Progress Bar -->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
-        android:layout_weight="1"
-        android:background="#d1d1d1">
+        android:layout_height="3dp"
+        android:layout_below="@id/toolbarContainer"
+        android:visibility="invisible" />
 
-        <WebView
-            android:id="@+id/webView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:max="100"
-            android:progress="50" />
-
-    </FrameLayout>
-
-    <LinearLayout
+    <!-- WebView -->
+    <WebView
+        android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_below="@id/progressBar" />
 
-        <RelativeLayout style="@style/NavItem">
-
-            <ImageView
-                android:id="@+id/goBack"
-                style="@style/NavIcon"
-                android:src="@drawable/arrow_left" />
-
-        </RelativeLayout>
-
-        <RelativeLayout style="@style/NavItem">
-
-            <ImageView
-                android:id="@+id/goForward"
-                style="@style/NavIcon"
-                android:src="@drawable/arrow_right" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
